# rcs-pydantic

./: .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  tests.yml
rcs_pydantic/: __init__.py  enums.py  errors.py  exceptions.py  main.py  messages.py  scheme.py  version.py
scripts/: lint-test.sh
tests/: factory.py  test_factory.py  test_openapi.py  test_rcs_pydantic.py
