[tool.poetry]
name = "rcs-pydantic"
version = "0.1.0"
description = ""
authors = ["xncbf <xncbf12@gmail.com>"]
keywords = ["pydantic", "rcs", "fastapi"]
homepage = "https://github.com/xncbf/rcs-pydantic"
repository = "https://github.com/xncbf/rcs-pydantic"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
