[tool.poetry]
name = "rcs-pydantic"
version = "2.0.0"
description = ""
authors = ["xncbf <xncbf12@gmail.com>"]
keywords = ["pydantic", "rcs", "fastapi"]
homepage = "https://github.com/xncbf/rcs-pydantic"
repository = "https://github.com/xncbf/rcs-pydantic"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest = "*"
black = "*"
mypy = "*"
isort = "*"
Faker = "^11.3.0"
factory-boy = "^3.2.1"
fastapi = "^0.109.0"
uvicorn = "^0.18.3"
ruff = "^0.1.14"

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = '3.10'
ignore_missing_imports = 'True'

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
no_implicit_reexport = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.isort]
profile = "black"
line_length = 120
sections= ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "B023",
    "C901"
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations"
]

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8.
target-version = "py38"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

# https://docs.pytest.org/en/6.2.x/reference.html
[tool.pytest.ini_options]
minversion = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
